@@ -1795,6 +1795,12 @@ Mon May 10 15:38:58 CEST 2004
 
 	- Argh, just another bug in adjust_informix.
 	- Added "extern C" flags for C++ compiler.
+
+Fri May 21 15:17:35 CEST 2004
+	
+	- Fixed DEALLOCATE PREPARE to use correct function call
+	- Made sure connect statement does not accept single char variable,
+	  but only strings.
 	- Set pgtypes library version to 1.2.
 	- Set ecpg version to 3.2.0.
 	- Set compat library version to 1.2.
